sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <formula>Requesting_Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CompanyName</label>
    <type>Text</type>
</CustomField>