sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Electronic_Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Payment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Electronic Payment Request</label>
    <referenceTo>Electronic_Payment_Request__c</referenceTo>
    <relationshipLabel>Purchase Order Line Items</relationshipLabel>
    <relationshipName>Purchase_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>