sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date__c</fullName>
    <formula>Purchase_Order__r.Expected_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Date</label>
    <type>Date</type>
</CustomField>