sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Firm_Comments__c.field-meta.xml
<CustomField>
    <fullName>Firm_Comments__c</fullName>
    <label>Firm Comments</label>
    <type>TextArea</type>
</CustomField>