sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/GLA__c.field-meta.xml
<CustomField>
    <fullName>GLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GLA</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>gla</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Purchase Order Line Items (GLA)</relationshipLabel>
    <relationshipName>Purchase_Order_Line_Items3</relationshipName>
    <type>Lookup</type>
</CustomField>