sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Inventory_Item_UOM__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item_UOM__c</fullName>
    <formula>Purchase_Order_Item__r.Inventory_Item__r.Inventory_UoM__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Item UOM</label>
    <type>Text</type>
</CustomField>