sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Invoice_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked as long as the the item has an active Invoice assigned</description>
    <label>Invoice Assigned</label>
    <type>Checkbox</type>
</CustomField>