sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>