sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Category__c</fullName>
    <label>Item Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stock Item</fullName>
            </value>
            <value>
                <fullName>One-off Item</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>