sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <formula>TEXT(Purchase_Order_Item__r.Inventory_Item__r.Item_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Type</label>
    <type>Text</type>
</CustomField>