sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Last_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Invoice</label>
    <type>Checkbox</type>
</CustomField>