sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Min_Price_Var__c.field-meta.xml
<CustomField>
    <fullName>Min_Price_Var__c</fullName>
    <formula>Unit_Gross_Price__c - (Unit_Gross_Price__c *  PO_Price_Var_Per__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Minimum accepted value for payment Variance</inlineHelpText>
    <label>Min Price Var</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>