sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>Compare against viAvgUnitPrice to determine if the PO Line has been paid for.</description>
    <inlineHelpText>Compare against viAvgUnitPrice to determine if the PO Line has been paid for.</inlineHelpText>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NO PAYMENTS MADE</fullName>
            </value>
            <value>
                <fullName>ALL PAYMENTS DONE</fullName>
            </value>
            <value>
                <fullName>OVERPAYMENT DONE</fullName>
            </value>
            <value>
                <fullName>PARTIAL PAYMENTS DONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>