sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Payment_Variance__c.field-meta.xml
<CustomField>
    <fullName>Payment_Variance__c</fullName>
    <label>Payment Variance</label>
    <length>250</length>
    <type>Text</type>
</CustomField>