sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/PIN__c.field-meta.xml
<CustomField>
    <fullName>PIN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIN</label>
    <referenceTo>c2g__codaPurchaseInvoice__c</referenceTo>
    <relationshipLabel>Purchase Order Line Items</relationshipLabel>
    <relationshipName>Purchase_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>