sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/PIN_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>PIN_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIN Line Item</label>
    <referenceTo>c2g__codaPurchaseInvoiceLineItem__c</referenceTo>
    <relationshipLabel>Purchase Order Line Items</relationshipLabel>
    <relationshipName>Purchase_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>