sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Po_line_Receipt_Status__c.field-meta.xml
<CustomField>
    <fullName>Po_line_Receipt_Status__c</fullName>
    <label>Po line Receipt Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Items Partially Received</fullName>
            </value>
            <value>
                <fullName>All items Received</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>