sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/PO_Price_Var_Per__c.field-meta.xml
<CustomField>
    <fullName>PO_Price_Var_Per__c</fullName>
    <description>PO line  Price Variance Percentage</description>
    <inlineHelpText>PO line  Price Variance Percentage</inlineHelpText>
    <label>PO Price Var Per</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>