sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/PR_Line_Item_Budget_Per_Item__c.field-meta.xml
<CustomField>
    <fullName>PR_Line_Item_Budget_Per_Item__c</fullName>
    <formula>PTS_Line_Item__r.Budget_Amount_Per_item__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PR Line Item Budget Per Item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>