sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/PR_Line_Item_Total_Budget__c.field-meta.xml
<CustomField>
    <fullName>PR_Line_Item_Total_Budget__c</fullName>
    <formula>PTS_Line_Item__r.Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PR Line Item Total Budget(KES)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>