sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Purchase Order Line Items</relationshipLabel>
    <relationshipName>Purchase_Order_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>