sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Purchase_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase Order Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Purchase_Order_Item__c.Vendor__c</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Purchase_Order_Item__c</referenceTo>
    <relationshipLabel>Purchase Order Line Items</relationshipLabel>
    <relationshipName>Purchase_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>