sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Quantity_Accepted_formular__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Accepted_formular__c</fullName>
    <formula>Quantity_Accepted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Accepted</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>