sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Quantity_At_Hand__c.field-meta.xml
<CustomField>
    <fullName>Quantity_At_Hand__c</fullName>
    <formula>Purchase_Order_Item__r.Inventory_Item__r.Inventory_Stock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity At Hand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>