sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Quantity_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Remaining__c</fullName>
    <formula>Quantity_Requested__c -  Quantity_Accepted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>