sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Date__c</fullName>
    <label>Last Receipt Date</label>
    <type>Date</type>
</CustomField>