sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Receipt_Variance__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Variance__c</fullName>
    <label>Receipt Variance</label>
    <length>250</length>
    <type>Text</type>
</CustomField>