sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Requesting_Company__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Company</label>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Purchase Order Line Items (Company)</relationshipLabel>
    <relationshipName>Purchase_Order_Line_Items4</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>