sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Return_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Return_For_Approval__c</fullName>
    <formula>OR(IF(( Unit_Net_Price__c  -  Purchase_Order_Item__r.Unit_Net_Price__c )  &gt;  (0.05 * Purchase_Order_Item__r.Unit_Net_Price__c), true, false),
IF(( Unit_Net_Price__c  -  Purchase_Order_Item__r.Unit_Net_Price__c )  &gt;  (1000), true, false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return For Approval</label>
    <type>Checkbox</type>
</CustomField>