sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Return_To_PR_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Return_To_PR_For_Approval__c</fullName>
    <formula>OR(IF(( Unit_Net_Price__c -  PTS_Line_Item__r.Budget_Amount_Per_item__c ) &gt; (0.05 * PTS_Line_Item__r.Budget_Amount_Per_item__c ), true, false),
IF(( Unit_Net_Price__c - PTS_Line_Item__r.Budget_Amount_Per_item__c  ) &gt; (1000), true, false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return To PR For Approval</label>
    <type>Checkbox</type>
</CustomField>