sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_Conditions__c</fullName>
    <label>Terms &amp; Conditions</label>
    <type>TextArea</type>
</CustomField>