sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Paid__c</fullName>
    <label>Total Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>