sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Total_Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Remaining__c</fullName>
    <label>Total Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>