sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Total_Item_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Item_Value__c</fullName>
    <formula>Quantity_Requested__c  *  Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Price less VAT</inlineHelpText>
    <label>Total Item Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>