sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Total_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Price__c</fullName>
    <formula>Unit_Net_Price__c *  Quantity_Requested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Price, exclusive of VAT if applicable</inlineHelpText>
    <label>Total Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>