sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <formula>Total_VAT_Amount__c +  Total_Net_Price__c</formula>
    <inlineHelpText>Total amount inclusive of VAT if applicable</inlineHelpText>
    <label>Total Gross Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>