sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Total_VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_VAT_Amount__c</fullName>
    <formula>VAT_Amount__c *  Quantity_Requested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross VAT amount</inlineHelpText>
    <label>Total VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>