sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Unique_Number__c.field-meta.xml
<CustomField>
    <fullName>Unique_Number__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Unique Number</label>
    <type>AutoNumber</type>
</CustomField>