sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Unit_Gross_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Gross_Price__c</fullName>
    <formula>Unit_Net_Price__c +  VAT_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Gross Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>