sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Unit_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Net_Price__c</fullName>
    <formula>IF(VAT_inclusive__c = true, 
   Unit_Price__c /(  (VALUE(TEXT(VAT_Percentage__c))+100)/100   ) ,
   Unit_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>