sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Unit_Net_Price_Difference__c.field-meta.xml
<CustomField>
    <fullName>Unit_Net_Price_Difference__c</fullName>
    <formula>Purchase_Order_Item__r.Unit_Net_Price__c -  Unit_Net_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Net Price Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>