sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/UoM__c.field-meta.xml
<CustomField>
    <fullName>UoM__c</fullName>
    <formula>Purchase_Order_Item__r.Purchase_UoM__r.Name</formula>
    <label>UoM</label>
    <type>Text</type>
</CustomField>