sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Variance_Flag__c.field-meta.xml
<CustomField>
    <fullName>Variance_Flag__c</fullName>
    <label>Variance Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>