sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Variation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Variation_Notes__c</fullName>
    <label>Variation Notes</label>
    <type>TextArea</type>
</CustomField>