sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>VAT_Amount__c</fullName>
    <formula>IF(Vatable__c = true, 
  IF( VAT_inclusive__c = true, 
                       Unit_Price__c - (Unit_Price__c /((VALUE(TEXT(VAT_Percentage__c))+100)/100)) ,
                       Unit_Price__c * (VALUE(TEXT(VAT_Percentage__c))/100)) , 
   0
)</formula>
    <inlineHelpText>Total VAT Amount</inlineHelpText>
    <label>Unit VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>