sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/VAT_inclusive__c.field-meta.xml
<CustomField>
    <fullName>VAT_inclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this checkbox if the Unit Price is subject to VAT and is inclusive of VAT amount. Otherwise leave unselected</inlineHelpText>
    <label>VAT inclusive?</label>
    <type>Checkbox</type>
</CustomField>