sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/VAT_Percentage__c.field-meta.xml
<CustomField>
    <fullName>VAT_Percentage__c</fullName>
    <label>VAT Percentage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>