sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Vatable__c.field-meta.xml
<CustomField>
    <fullName>Vatable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this checkbox if the Unit Price is subject to VAT. Otherwise leave unselected.</inlineHelpText>
    <label>Item VATable?</label>
    <type>Checkbox</type>
</CustomField>