sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Vendor_id__c.field-meta.xml
<CustomField>
    <fullName>Vendor_id__c</fullName>
    <formula>Purchase_Order_Item__r.Vendor__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor id</label>
    <type>Text</type>
</CustomField>