sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/VI_Avg_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>VI_Avg_Unit_Price__c</fullName>
    <description>The Avg Price of the Reconciled Amount Paid and the Reconciled Total Qty</description>
    <formula>IF(VI_Recon_Total__c * VI_Recon_Qty_s__c =  0  , 0,VI_Recon_Total__c  /  VI_Recon_Qty_s__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>IF(VI_Recon_Total__c * VI_Recon_Qty_s__c =  0  , 0,VI_Recon_Total__c  /  VI_Recon_Qty_s__c)</inlineHelpText>
    <label>VI Avg Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>