sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/VI_Recon_Qty_s__c.field-meta.xml
<CustomField>
    <fullName>VI_Recon_Qty_s__c</fullName>
    <defaultValue>0</defaultValue>
    <label>VI Recon Qty&#39;s</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>