sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/VI_Recon_Total__c.field-meta.xml
<CustomField>
    <fullName>VI_Recon_Total__c</fullName>
    <label>VI Recon Total</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>