sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/validationRules/CancellationValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CancellationValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c , &#39;Cancelled&#39;) ,  OR(Invoice_Assigned__c = true ,  NOT(ISBLANK(Purchase_Order__r.Vendor_Invoice__c))))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You cannot change status to cancelled after the VI has been created</errorMessage>
</ValidationRule>