sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/validationRules/ChangeGlaValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ChangeGlaValidation</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( GLA__c )</errorConditionFormula>
    <errorDisplayField>GLA__c</errorDisplayField>
    <errorMessage>You are not allowed to change PO Item after PO Creation</errorMessage>
</ValidationRule>