sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/validationRules/Payment_Variation_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Variation_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Status__c , &#39;Closed&#39;) ,OR( Unit_Gross_Price__c &gt;  Max_Price_Var__c ,Unit_Gross_Price__c &lt;  Min_Price_Var__c ), ISBLANK( Payment_Variance__c ),Last_Invoice__c = false  )</errorConditionFormula>
    <errorDisplayField>Payment_Variance__c</errorDisplayField>
    <errorMessage>This Field Cannot be empty</errorMessage>
</ValidationRule>