sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/validationRules/POCompanyAndPOLineCompanyValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>POCompanyAndPOLineCompanyValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Requesting_Company__c  &lt;&gt;  Purchase_Order__r.Company__c</errorConditionFormula>
    <errorDisplayField>Requesting_Company__c</errorDisplayField>
    <errorMessage>Company on this PO Line Item does Not match Company on the PO header. Please check.</errorMessage>
</ValidationRule>