sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/validationRules/POLineAndPRLineCompanyValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>POLineAndPRLineCompanyValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Requesting_Company__c  &lt;&gt;  PTS_Line_Item__r.Requesting_Company__c</errorConditionFormula>
    <errorMessage>The company on the PO Line Item is not the same as the Company on the PR Line Item. Please review.</errorMessage>
</ValidationRule>