sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Line_Item__c/validationRules/POVendorAndPOItemVendorValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>POVendorAndPOItemVendorValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Purchase_Order_Item__r.Vendor__c  &lt;&gt;  Purchase_Order__r.Vendor_Account__c</errorConditionFormula>
    <errorMessage>Vendor on this PO Line Item does Not match Vendor on the PO header. Please check.</errorMessage>
</ValidationRule>